Migrates from 47deg to 47degrees GH organization (#53)